fine adjustments to banners

--- a/src/places.html
+++ b/src/places.html
@@ -56,9 +56,6 @@
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
-                     <!-- <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -71,7 +68,8 @@
             <div class="row">
                <div class="col-sm-12">
                   <h1 class="places_taital">Places</h1>
-                  <p class="places_text">Typesetting industry lorem Ipsum is simply dummy text of the </p>
+                  <p class="places_text">These are the some featured places, you can visit, do adventurous activities and enjoy your vacation with your near and dear ones.</p>
+                  <p class="places_text">Also you can plan solo trips to many of these places and if you are a peace lover, then many of these places are gonna feel you like heaven.</p>
                </div>
             </div>
             <div class="places_section_2">
@@ -82,9 +80,9 @@
                            <img src="images/img-1.jpg" class="image_1">
                            <img src="images/img-1.jpg" class="image_2">
                         </div>
-                        <h3 class="decorate_text">Original Coffee</h3>
-                        <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <h3 class="decorate_text">SRINAGAR GARHWAL</h3>
+                        <p class="tation_text">The historic town of Srinagar is cradled on the pristine banks of Alaknanda River and 560 metres above the sea level. The pristine town of Srinagar is an important cultural and educational centre. It is an important point of stay during Badrinath, Kedarnath and Char Dham Yatra.</p>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -93,20 +91,55 @@
                            <img src="images/img-6.jpg" class="image_1">
                            <img src="images/img-6.jpg" class="image_2">
                         </div>
-                        <h3 class="decorate_text">20 Coffee Flavors</h3>
-                        <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <h3 class="decorate_text">PAURI GARHWAL</h3>
+                        <p class="tation_text">Adorned in the undisturbed vistas of the beguiling Garhwal Himalayas, lies the city of Pauri. It is enclosed by the thick woodlands and the benevolent snow-clad hills that appear like a silver tiara. Pauri is a hidden treassure, with one of the most beautiful sunset in Uttarakhand.</p>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/img-8.JPG" class="image_1">
-                           <img src="images/img-8.JPG" class="image_2">
+                           <img src="images/img-7.jpg" class="image_1">
+                           <img src="images/img-7.jpg" class="image_2">
                         </div>
-                        <h3 class="decorate_text">Pleasant Abient</h3>
-                        <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <h3 class="decorate_text">DEVPRAYAG</h3>
+                        <p class="tation_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
+                     </div>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-lg-4 col-sm-12 col-md-4">
+                     <div class="box_main active">
+                        <div class="house_icon">
+                           <img src="images/img-1.jpg" class="image_1">
+                           <img src="images/img-1.jpg" class="image_2">
+                        </div>
+                        <h3 class="decorate_text">SRINAGAR GARHWAL</h3>
+                        <p class="tation_text">The historic town of Srinagar is cradled on the pristine banks of Alaknanda River and 560 metres above the sea level. The pristine town of Srinagar is an important cultural and educational centre. It is an important point of stay during Badrinath, Kedarnath and Char Dham Yatra.</p>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
+                     </div>
+                  </div>
+                  <div class="col-lg-4 col-sm-12 col-md-4">
+                     <div class="box_main">
+                        <div class="house_icon">
+                           <img src="images/img-6.jpg" class="image_1">
+                           <img src="images/img-6.jpg" class="image_2">
+                        </div>
+                        <h3 class="decorate_text">PAURI GARHWAL</h3>
+                        <p class="tation_text">Adorned in the undisturbed vistas of the beguiling Garhwal Himalayas, lies the city of Pauri. It is enclosed by the thick woodlands and the benevolent snow-clad hills that appear like a silver tiara. Pauri is a hidden treassure, with one of the most beautiful sunset in Uttarakhand.</p>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
+                     </div>
+                  </div>
+                  <div class="col-lg-4 col-sm-12 col-md-4">
+                     <div class="box_main">
+                        <div class="house_icon">
+                           <img src="images/img-7.jpg" class="image_1">
+                           <img src="images/img-7.jpg" class="image_2">
+                        </div>
+                        <h3 class="decorate_text">DEVPRAYAG</h3>
+                        <p class="tation_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
+                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
                </div>
