--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,6 @@
                      <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                      </li>
-                     <!-- <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                     </li> -->
                   </ul>
                </div>
             </nav>
@@ -74,9 +71,9 @@
                      <div class="row">
                         <div class="col-sm-12">
                            <div class="banner_taital">
-                              <h1 class="outstanding_text">Outstanding</h1>
-                              <h1 class="coffee_text">Coffee Shop</h1>
-                              <p class="there_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                              <h1 class="outstanding_text">Heart Of Uttarakhand</h1>
+                              <h1 class="coffee_text">PAURI</h1>
+                              <p class="there_text">Adorned in the undisturbed vistas of the beguiling Garhwal Himalayas, lies the city of Pauri. It is enclosed by the thick woodlands and the benevolent snow-clad hills that appear like a silver tiara. </p>
                               <div class="learnmore_bt"><a href="#">Learn More</a></div>
                            </div>
                         </div>
@@ -86,9 +83,9 @@
                      <div class="row">
                         <div class="col-sm-12">
                            <div class="banner_taital">
-                              <h1 class="outstanding_text">Outstanding </h1>
-                              <h1 class="coffee_text">Coffee Shop</h1>
-                              <p class="there_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                              <h1 class="outstanding_text">A Historic Town</h1>
+                              <h1 class="coffee_text">SRINAGAR</h1>
+                              <p class="there_text">The historic town of Srinagar is cradled on the pristine banks of Alaknanda River. It is seated at an average elevation of 560 metres above sea level. The pristine town of Srinagar is an important cultural and educational centre. </p>
                               <div class="learnmore_bt"><a href="#">Learn More</a></div>
                            </div>
                         </div>
@@ -98,9 +95,9 @@
                      <div class="row">
                         <div class="col-sm-12">
                            <div class="banner_taital">
-                              <h1 class="outstanding_text">Outstanding </h1>
-                              <h1 class="coffee_text">Coffee Shop</h1>
-                              <p class="there_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, </p>
+                              <h1 class="outstanding_text">The Town Of Godly Confluence</h1>
+                              <h1 class="coffee_text">DEVPRAYAG</h1>
+                              <p class="there_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
                               <div class="learnmore_bt"><a href="#">Learn More</a></div>
                            </div>
                         </div>
@@ -242,7 +239,7 @@
       <!-- places section start -->
       <div class="places_section layout_padding">
          <div class="container">
-            <div class="row">
+            <div class="row_without_top-padding">
                <div class="col-sm-12">
                   <h1 class="places_taital">Places</h1>
                   <p class="places_text">These are the some featured places, you can visit, do adventurous activities and enjoy your vacation with your near and dear ones.</p>
@@ -257,8 +254,8 @@
                            <img src="images/img-1.jpg" class="image_1">
                            <img src="images/img-1.jpg" class="image_2">
                         </div>
-                        <h3 class="decorate_text">Original Coffee</h3>
-                        <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
+                        <h3 class="decorate_text">SRINAGAR GARHWAL</h3>
+                        <p class="tation_text">The historic town of Srinagar is cradled on the pristine banks of Alaknanda River and 560 metres above the sea level. The pristine town of Srinagar is an important cultural and educational centre. It is an important point of stay during Badrinath, Kedarnath and Char Dham Yatra.</p>
                         <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
@@ -268,8 +265,8 @@
                            <img src="images/img-6.jpg" class="image_1">
                            <img src="images/img-6.jpg" class="image_2">
                         </div>
-                        <h3 class="decorate_text">20 Coffee Flavors</h3>
-                        <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
+                        <h3 class="decorate_text">PAURI GARHWAL</h3>
+                        <p class="tation_text">Adorned in the undisturbed vistas of the beguiling Garhwal Himalayas, lies the city of Pauri. It is enclosed by the thick woodlands and the benevolent snow-clad hills that appear like a silver tiara. Pauri is a hidden treassure, with one of the most beautiful sunset in Uttarakhand.</p>
                         <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
@@ -279,8 +276,8 @@
                            <img src="images/img-7.jpg" class="image_1">
                            <img src="images/img-7.jpg" class="image_2">
                         </div>
-                        <h3 class="decorate_text">Pleasant Abient</h3>
-                        <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
+                        <h3 class="decorate_text">DEVPRAYAG</h3>
+                        <p class="tation_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
                         <div class="readmore_bt"><a href="places.html">Read More</a></div>
                      </div>
                   </div>
