changed about us image

--- a/src/about.html
+++ b/src/about.html
@@ -75,7 +75,7 @@
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="about_imgage" style="margin-top: 50px;"><img src="images/about-image.JPG"></div>
+                  <div class="about_imgage" style="margin-top: 50px;"><img src="images/about-image.png"></div>
                </div>
             </div>
          </div>
