--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="about_img"><img src="images/about-image.JPG"></div>
+                  <div class="about_img"><img src="images/about-image.png"></div>
                </div>
             </div>
          </div>
