--- a/src/places.html
+++ b/src/places.html
@@ -82,18 +82,18 @@
                         </div>
                         <h3 class="decorate_text">SRINAGAR GARHWAL</h3>
                         <p class="tation_text">The historic town of Srinagar is cradled on the pristine banks of Alaknanda River and 560 metres above the sea level. The pristine town of Srinagar is an important cultural and educational centre. It is an important point of stay during Badrinath, Kedarnath and Char Dham Yatra.</p>
-                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
+                        <div class="readmore_bt"><a href="places/srinagar.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/img-6.jpg" class="image_1">
-                           <img src="images/img-6.jpg" class="image_2">
+                           <img src="images/img-5.jpg" class="image_1">
+                           <img src="images/img-5.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">PAURI GARHWAL</h3>
                         <p class="tation_text">Adorned in the undisturbed vistas of the beguiling Garhwal Himalayas, lies the city of Pauri. It is enclosed by the thick woodlands and the benevolent snow-clad hills that appear like a silver tiara. Pauri is a hidden treassure, with one of the most beautiful sunset in Uttarakhand.</p>
-                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
+                        <div class="readmore_bt"><a href="places/pauri.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
@@ -104,7 +104,7 @@
                         </div>
                         <h3 class="decorate_text">DEVPRAYAG</h3>
                         <p class="tation_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
-                        <div class="readmore_bt"><a href="places.html">Read More</a></div>
+                        <div class="readmore_bt"><a href="places/devprayag.html">Read More</a></div>
                      </div>
                   </div>
                </div>
