--- a/src/gallery.html
+++ b/src/gallery.html
@@ -91,7 +91,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="/src/images/img-03.jpg" alt="Avatar" class="image">
+                           <img src="/src/images/img-3.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
@@ -105,7 +105,7 @@
                         <div class="container_main">
                            <img src="images/img-4.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/pauri.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -114,7 +114,7 @@
                            <img src="images/img-5.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="overlay">
-                                 <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                                 <div class="text"><a href="places/pauri.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                               </div>
                            </div>
                         </div>
@@ -124,7 +124,7 @@
                            <img src="images/img-6.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="overlay">
-                                 <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                                 <div class="text"><a href="places/pauri.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                               </div>
                            </div>
                         </div>
@@ -137,7 +137,7 @@
                         <div class="container_main">
                            <img src="images/img-7.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/devprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -145,7 +145,7 @@
                         <div class="container_main">
                            <img src="images/img-8.JPG" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/devprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -153,14 +153,14 @@
                         <div class="container_main">
                            <img src="images/img-9.JPG" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/devprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
-            <!-- <div class="seemore_bt"><a href="#">See More</a></div> -->
+            <div class="seemore_bt"><a href="gallery.html">See More</a></div>
          </div>
       </div>
       <!-- gallery section end -->
