--- a/src/places/pauri.html
+++ b/src/places/pauri.html
@@ -9,25 +9,25 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>About</title>
+      <title>Pauri-planSpot</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
       <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="../css/style.css">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="../css/responsive.css">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="../images/fevicon.png" type="image/gif"/>
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- owl stylesheets --> 
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="../css/owl.carousel.min.css">
+      <link rel="stylesheet" href="../css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
    </head>
    <body>
@@ -35,26 +35,26 @@
       <div class="header_section">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-               <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+               <div class="logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
                </button>
                <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ml-auto">
                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" style="color: #00b3ff;" href="about.html">About Us</a>
+                        <a class="nav-link" href="../about.html">About Us</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
+                        <a class="nav-link" href="../gallery.html">Gallery</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="places.html">Places</a>
+                        <a class="nav-link" href="../places.html">Places</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="../contact.html">Contact Us</a>
                      </li>
                   </ul>
                </div>
@@ -62,24 +62,50 @@
          </div>
       </div>
       <!--header section end -->
-      <!-- about section start -->
-      <div class="about_section layout_padding">
+      <!-- place section start -->
+      <div class="place_section layout_padding">
          <div class="container">
             <div class="row">
-               <div class="col-md-6" style="padding-left: 20px;">
-                  <div class="about_taital_main">
-                     <div class="about_taital">About Us</div>
-                     <p class="about_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="about_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+               <div class="place_title">Pauri GARHWAL</div>
+               <div class="col-md-6">
+                  <div class="place_title_main">
+                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
+                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="about_image" style="margin-top: 50px;"><img src="images/about-image.png"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-4.jpg"></div>
+               </div>
+            </div>
+         </div>
+         <div class="container">
+            <div class="row">
+               <div class="col-md-6">
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-5.jpg"></div>
+               </div>
+               <div class="col-md-6">
+                  <div class="place_title_main">
+                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
+                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="container">
+            <div class="row">
+               <div class="col-md-6">
+                  <div class="place_title_main">
+                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
+                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                  </div>
+               </div>
+               <div class="col-md-6">
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-6.jpg"></div>
                </div>
             </div>
          </div>
       </div>
-      <!-- about section end -->
+      <!-- place section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
          <div class="container">
@@ -92,11 +118,11 @@
                   <h3 class="useful_text" style="text-align: center;">Menu</h3>
                   <div class="footer_menu">
                      <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="places.html">Places</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../about.html">About Us</a></li>
+                        <li><a href="../gallery.html">Gallery</a></li>
+                        <li><a href="../places.html">Places</a></li>
+                        <li><a href="../contact.html">Contact Us</a></li>
                      </ul>
                   </div>
                </div>
@@ -148,13 +174,13 @@
       </div>
       <!-- Developer section end -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
+      <script src="../js/jquery.min.js"></script>
+      <script src="../js/popper.min.js"></script>
+      <script src="../js/bootstrap.bundle.min.js"></script>
+      <script src="../js/jquery-3.0.0.min.js"></script>
+      <script src="../js/plugin.js"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>     
+      <script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
+      <script src="../js/custom.js"></script>     
    </body>
 </html>
