adding place-pages

--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,7 @@
                            <img src="images/img-6.jpg" alt="Avatar" class="image">
                            <div class="overlay">
                               <div class="overlay">
-                                 <div class="text"><a href="places/pauri.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                                 <div class="text"><a href="places/rudraprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                               </div>
                            </div>
                         </div>
@@ -209,7 +209,7 @@
                         <div class="container_main">
                            <img src="images/img-7.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="places/devprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/mana.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
